macro(switch_add_btor_legacy_test name)
  add_executable(${name} "${PROJECT_SOURCE_DIR}/tests/btor/${name}.cpp")
  target_link_libraries(${name} smt-switch-btor)
  add_test(NAME ${name}_test COMMAND ${name})
endmacro()

macro(switch_add_btor_test name)
  switch_add_btor_legacy_test(${name})
  target_link_libraries(${name} GTest::gtest_main)
endmacro()

# these tests don't use GoogleTest yet
# TODO move old tests to Google Test infrastructure
switch_add_btor_legacy_test(btor-array-empty-assignment)
switch_add_btor_legacy_test(btor-array-models)
switch_add_btor_legacy_test(btor-arrays)
switch_add_btor_legacy_test(btor-const-arrays)
switch_add_btor_legacy_test(btor-data-structures)
switch_add_btor_legacy_test(btor-exceptions)
switch_add_btor_legacy_test(btor-incremental)
switch_add_btor_legacy_test(btor-indexed-op-tests)
switch_add_btor_legacy_test(btor-neg-numbers)
switch_add_btor_legacy_test(btor-negation)
switch_add_btor_legacy_test(btor-simple)
switch_add_btor_legacy_test(btor-substitute)
switch_add_btor_legacy_test(btor-tests)
switch_add_btor_legacy_test(btor-transfer)

switch_add_btor_test(btor-opts)
switch_add_btor_test(btor-printing)
